--- a/versions/style.css
+++ b/versions/style.css
@@ -1,26 +1,71 @@
 
-.couler-verte
-{ 
-     color:green;
-     text-align: center;
+ body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      background: #7777ee;
+    }
+    header {
+      background:#258a39;
+      color: rgb(235, 235, 237);
+      padding: 2rem;
+      text-align: center;
+    }
+    nav {
+      background: #444;
+      padding: 0.5rem;
+      text-align: center;
+    }
+    nav a {
+      color: white;
+      margin: 0 15px;
+      text-decoration: none;
+    }
+    nav a:hover {
+      text-decoration: underline;
+    }
+    main {
+      padding: 2rem;
+      text-align: center;
+    }
+    footer {
+      
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background: black;
+  color: rgb(224, 226, 247);
+  text-align: center;
+  padding: 1rem;
+      
+    }
+    main {
+          min-height: 100vh;
+  background-image: url('image/image.jpg');
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
 
+  
 }
-.image-conatiner
-{ 
-     
-     border-image: center;
-
-}
-
 h2 { 
-     color:green;
+     color:aliceblue;
      text-align: center;
 
 }
-p
-{ 
-    border-style: solid;
-     color:beige;
+h3{ 
+     color:rgb(209, 221, 231);
      text-align: center;
 
 }
+ul { 
+     color:white;
+     text-align:left;
+
+}
+
+ 
+
+
+
+
